--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -133,14 +133,14 @@ span:nth-child(2),span:nth-child(4),span:nth-child(6),span:nth-child(8),span:nth
   padding: 60px 0;
 }
 
-#signup h2 {
+h2 {
   text-align: center;
   margin-bottom: 30px;
   font-family: 'Work Sans', sans-serif; /* Ensure font matches site */
   font-weight: 800; /* Bold */
   letter-spacing: 3px; /* Adjust spacing to match NEXTDY text */
   text-transform: uppercase; /* Capitalize all letters */
-  font-size: 24px; /* Increase size if needed */
+  font-size: 15px; /* Increase size if needed */
 }
 
 #signup-form {
