--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,36 +17,36 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #000000;
-  font-family: 'Suisse Intl', sans-serif;
+	color: #000000;
+	font-family: 'Suisse Intl', sans-serif;
 }
 
-#title h1 {
+#title h1{
   font-family: 'GT Alpina Typewriter', serif;
-  font-size: 70px;
-  font-weight: 1100;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate3d(-50%, -50%, 0);
+	font-size: 70px;
+	font-weight: 1100;
+  position:absolute;
+  top:40%;
+  left:50%;
+  transform:translate3d(-50%,-50%,0);
   letter-spacing: -5px;
-  white-space: nowrap;
-  z-index: 2;
+  white-space:nowrap;
+  z-index:2;
 }
 
-#title h2 {
+#title h2{
   font-size: 18px;
   font-weight: 800;
   margin-bottom: 15px;
-  position: absolute;
-  left: 40%;
-  top: 49%;
+  position:absolute;
+  left:40%;
+  top:49%;
 }
 
-#signup {
+#signup{
   position: fixed;
-  bottom: 50px;
-  left: 50%;
+  bottom:50px;
+  left:50%;
   transform: translateX(-50%);
   z-index: 99;
   user-select: none;
@@ -61,7 +61,7 @@ body {
   margin: 0 auto;
 }
 
-#signup h2 {
+#signup h2{
   text-align: center;
   margin-bottom: 15px;
   font-weight: 800;
@@ -88,27 +88,20 @@ body {
 }
 
 #signup-form input[type="submit"] {
-  appearance: none;
-  -webkit-appearance: none;
   display: block;
   width: 100%;
   padding: 12px;
-  background-color: #000;
-  color: #fff;
-  border: none;
+  color: #333;
+  border: 1px solid #ccc;
   border-radius: 20px;
   font-size: 16px;
   font-weight: 600;
-  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-  -webkit-tap-highlight-color: transparent;
 }
 
 #signup-form input[type="submit"]:hover {
-  background-color: #555;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
-  color: #fff;
 }
 
 #signup-form input[type="submit"]:focus {
